# predictive-maintenance-for-hydraulic-systems

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: predictive_maintenance.ipynb  predictive_maintenance.py
reports/: metrics.json
scripts/: evaluate_model.py  preprocess_data.py  train_model.py
src/data/: loader.py  preprocessing.py
src/features/: feature_engineering.py
src/models/: evaluate.py  train.py
