[build-system]
requires = [\"setuptools>=42\", \"wheel\"]
build-backend = \"setuptools.build_meta\"

[project]
name = \"predictive_maintenance\"
version = \"0.1.0\"
description = \"Hydraulic Predictive Maintenance project\"
authors = [
    {name = \"Author Name\", email = \"author@example.com\"}
]
dependencies = [
    \"numpy>=1.20.0\",
    \"pandas>=1.3.0\",
    \"scikit-learn>=1.0\",
    \"matplotlib>=3.4.0\",
    \"seaborn>=0.11.0\"
]
